--- a/education.html
+++ b/education.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
-  <link rel="icon" href="image/logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="about.css">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="footer.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Education Page</title>
 
+    <link rel="icon" href="image/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="education.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -26,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="education.html">Education</a>
+                        <a class="nav-link" href="https://www.youtube.com/education">Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about_us.html">Contact</a>
@@ -67,44 +68,39 @@
     </nav>
 </header>
 
-
-
-
-
 <body>
-  <div class="about-container">
-    <h1>About Us</h1>
-    <p class="about-description">
-      Welcome to our company! We are committed to delivering the best services to our clients.
-      Our team of experts is dedicated to excellence and innovation. We aim to bring you high-quality
-      products and exceptional customer service.
-    </p>
-    <div class="team-section">
-      <h2>Our Team</h2>
-      <div class="team-member">
-        <img src="image/member2.jpg" alt="Team Member 2">
-        <h3>Janith Suraweera</h3>     
-        <p>CEO & Founder</p>
-      </div>
+  <header class="header">
+    <h1>Education Resources</h1>
+    <p>Discover tools and tips to enhance your learning experience.</p>
+  </header>
 
-
-      <div class="team-member">
-        <img src="image/member1.jpeg" alt="Team Member 1">
-        <h3>Kaveen De Silva</h3>
-        <p>Chief Operations Officer</p>
-      </div>
+  <section class="resources">
+    <div class="resource-card">
+      <h2>Online Courses</h2>
+      <p>Explore a variety of online courses to boost your skills and knowledge.</p>
+      <a href="#">Learn More</a>
     </div>
-    <div class="social-media">
-      <h2>Follow Us</h2>
-      <a href="https://www.facebook.com/janith.suraweera.58" class="social-link">Facebook</a>
-      <a href="https://www.linkedin.com/in/janith-suraweera-510888203/" class="social-link">LinkedIn</a>
-      <a href="https://x.com/?lang=en" class="social-link">Twitter</a>
 
+    <div class="resource-card">
+      <h2>eBooks</h2>
+      <p>Access a vast library of eBooks across multiple subjects.</p>
+      <a href="#">Explore eBooks</a>
     </div>
-  </div>
+
+    <div class="resource-card">
+      <h2>Tutorial Videos</h2>
+      <p>Watch video tutorials on topics ranging from math to programming.</p>
+      <a href="#">Watch Now</a>
+    </div>
+
+    <div class="resource-card">
+      <h2>Webinars</h2>
+      <p>Participate in live webinars hosted by experts in various fields.</p>
+      <a href="#">Join a Webinar</a>
+    </div>
+  </section>
+
 </body>
-
-
 
 <footer class="footer">
     <h2>Start designing with Canva</h2>
@@ -187,5 +183,7 @@
         </div>
     </div>
 </footer>
+
+
 
 </html>
