--- a/menu.html
+++ b/menu.html
@@ -5,34 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Layout</title>
   <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="footer.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
+
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Canva</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="education.html">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about_us.html">Contact</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="Faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Learn
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="https://looka.com/logo-maker/">Logo</a></li>
+                            <li><a class="dropdown-item" href="Resumes.html">CV Templates</a></li>
+                            <li><a class="dropdown-item" href="https://www.youtube.com/education">Video</a></li>
+                            <li><a class="dropdown-item" href="menu.html">More...</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- Search Bar -->
+                <form class="d-flex me-3" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                </form>
+
+                <!-- Login and Signup Buttons -->
+                <div class="navbar-buttons">
+                    <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
+                    <a href="login.html" class="btn btn-primary">Sign Up</a>
+                    
+                </div>
+
+
+
+            </div>
+        </div>
+    </nav>
+</header>
+
+
 <body>
   <div class="menu-container">
     <div class="menu-category">
-      <h3>Visual documents</h3>
+      <h3>Visual Documents</h3>
       <ul>
         <li>Visual Suite</li>
         <li>Docs</li>
         <li>Presentations</li>
         <li>Whiteboards</li>
-        <li>PDF editor</li>
-        <li>Graphs and charts</li>
+        <li>PDF Editor</li>
+        <li>Graphs and Charts</li>
       </ul>
     </div>
     <div class="menu-category">
-      <h3>Photos and videos</h3>
+      <h3>Photos and Videos</h3>
       <ul>
-        <li>Video editor</li>
-        <li>YouTube video editor</li>
-        <li>Photo editor</li>
-        <li>Photo collages</li>
-        <li>Background remover</li>
+        <li>Video Editor</li>
+        <li>YouTube Video Editor</li>
+        <li>Photo Editor</li>
+        <li>Photo Collages</li>
+        <li>Background Remover</li>
       </ul>
     </div>
     <div class="menu-category">
       <h3>Print</h3>
       <ul>
-        <li>Business cards</li>
+        <li>Business Cards</li>
         <li>Cards</li>
         <li>Invitations</li>
         <li>Mugs</li>
@@ -45,11 +107,11 @@
     <div class="menu-category">
       <h3>Marketing</h3>
       <ul>
-       <a href="login.html"> <li>Logos</li></a>
+        <li><a href="login.html">Logos</a></li>
         <li>Posters</li>
         <li>Flyers</li>
         <li>Brochures</li>
-        <li>Social media</li>
+        <li>Social Media</li>
         <li>Websites</li>
         <li>Stickers</li>
         <li>Mockups</li>
