--- a/education.html
+++ b/education.html
@@ -57,7 +57,7 @@
                 <!-- Login and Signup Buttons -->
                 <div class="navbar-buttons">
                     <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="login.html" class="btn btn-primary">Sign Up</a>
+                    <a href="signup.html" class="btn btn-primary">Sign Up</a>
                     
                 </div>
 
