--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="body.css">
     <link rel="stylesheet" href="footer.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></h>
 </head>
 
@@ -56,7 +56,7 @@
                 <!-- Login and Signup Buttons -->
                 <div class="navbar-buttons">
                     <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="login.html" class="btn btn-primary">Sign Up</a>
+                    <a href="signup.html" class="btn btn-primary">Sign Up</a>
                     
                 </div>
 
