--- a/login.html
+++ b/login.html
@@ -47,16 +47,11 @@
                         </ul>
                     </li>
                 </ul>
-                <!-- Search Bar -->
-                <form class="d-flex me-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
-                </form>
 
                 <!-- Login and Signup Buttons -->
                 <div class="navbar-buttons">
                     <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="login.html" class="btn btn-primary">Sign Up</a>
+                    <a href="signup.html" class="btn btn-primary">Sign Up</a>
                     
                 </div>
 
