--- a/signup.html
+++ b/signup.html
@@ -14,27 +14,39 @@
 </head>
 
 
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Canva</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link active" href="home.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Education</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Learn</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Logo</a></li>
-                                <li><a class="dropdown-item" href="#">CV Templates</a></li>
-                                <li><a class="dropdown-item" href="#">Video</a></li>
-                            </ul>
-                        </li>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Canva</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="education.html">Education</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about_us.html">Contact</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Faq.html">FAQ</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Learn
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="https://looka.com/logo-maker/">Logo</a></li>
+                        <li><a class="dropdown-item" href="Resumes.html">CV Templates</a></li>
+                        <li><a class="dropdown-item" href="https://www.youtube.com/education">Video</a></li>
+                        <li><a class="dropdown-item" href="menu.html">More...</a></li>
                     </ul>
+                </li>
+            </ul>
 
                     <div class="navbar-buttons">
                         <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
