--- a/Faq.html
+++ b/Faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canva Home</title>
+    <title>FAQ</title>
     <link rel="icon" href="image/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="faq.css">
