--- a/Resumes.html
+++ b/Resumes.html
@@ -120,9 +120,10 @@
 
 
 
-    <footer class="footer">
-        <h2>Start designing with Canva</h2>
-        <a href="#" class="button">Get started for free</a>
+<footer class="footer">
+    <h2>Start designing with Crevo</h2>
+    <a href="home.html" class="button">Get started for free</a>
+
 
         <div class="footer-columns">
             <div class="footer-column">
