--- a/about_us.html
+++ b/about_us.html
@@ -68,15 +68,16 @@
     <div class="team-section">
       <h2>Our Team</h2>
       <div class="team-member">
-        <img src="image/member2.jpg" alt="Team Member 2">
-        <h3>Janith Suraweera</h3>     
+        <img src="image/member1.jpeg" alt="Team Member 1">
+        <h3>Shashika Dilshan Thennakoon</h3>
+         
         <p>CEO & Founder</p>
       </div>
 
 
       <div class="team-member">
-        <img src="image/member1.jpeg" alt="Team Member 1">
-        <h3>Kaveen De Silva</h3>
+        <img src="image/member2.jpg" alt="Team Member 2">
+        <h3>Janith Suraweera</h3>  
         <p>Chief Operations Officer</p>
       </div>
     </div>
@@ -93,8 +94,9 @@
 
 
 <footer class="footer">
-    <h2>Start designing with Canva</h2>
-    <a href="#" class="button">Get started for free</a>
+    <h2>Start designing with Crevo</h2>
+    <a href="home.html" class="button">Get started for free</a>
+
 
     <div class="footer-columns">
         <div class="footer-column">
