--- a/home.html
+++ b/home.html
@@ -206,8 +206,9 @@
 
 
     <footer class="footer">
-        <h2>Start designing with Canva</h2>
-        <a href="#" class="button">Get started for free</a>
+        <h2>Start designing with Crevo</h2>
+        <a href="home.html" class="button">Get started for free</a>
+    
 
         <div class="footer-columns">
             <div class="footer-column">
