--- a/Whiteboards.html
+++ b/Whiteboards.html
@@ -6,7 +6,7 @@
     <title>whiteboard</title>
     <link rel="icon" href="image/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="Resumes.css">
+    <link rel="stylesheet" href="Whiteboards.css">
     <link rel="stylesheet" href="footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></h>
@@ -72,15 +72,6 @@
         <canvas id="whiteboard"></canvas>
         <script src="Whiteboards.js"></script>
     </body>
-
-
-
-
-
-
-
-
-
 
 
     <footer class="footer">
@@ -165,9 +156,5 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
 </html>
