--- a/login.html
+++ b/login.html
@@ -1,87 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="icon" href="image/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <link rel="icon" href="image/logo.png" type="image/x-icon">
+        <link rel="stylesheet" href="navbar.css">
+        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="footer.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
 
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="crevo.html">Crevo</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="education.html">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about_us.html">Contact</a>
-                    </li>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="crevo.html">Crevo</a>
+                <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"
+                                href="education.html">Education</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about_us.html">Contact</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="Faq.html">FAQ</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Learn
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://looka.com/logo-maker/">Logo</a></li>
-                            <li><a class="dropdown-item" href="Resumes.html">CV Templates</a></li>
-                            <li><a class="dropdown-item" href="https://www.youtube.com/education">Video</a></li>
-                            <li><a class="dropdown-item" href="menu.html">More...</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Faq.html">FAQ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Learn
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item"
+                                        href="https://looka.com/logo-maker/">Logo</a></li>
+                                <li><a class="dropdown-item"
+                                        href="Resumes.html">CV
+                                        Templates</a></li>
+                                <li><a class="dropdown-item"
+                                        href="https://www.youtube.com/education">Video</a></li>
+                                <li><a class="dropdown-item"
+                                        href="menu.html">More...</a></li>
+                            </ul>
+                        </li>
+                    </ul>
 
-                <!-- Login and Signup Buttons -->
-                <div class="navbar-buttons">
-                    <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="signup.html" class="btn btn-primary">Sign Up</a>
-                    
+                    <!-- Login and Signup Buttons -->
+                    <div class="navbar-buttons">
+                        <a href="login.html"
+                            class="btn btn-outline-primary me-2">Login</a>
+                        <a href="signup.html" class="btn btn-primary">Sign
+                            Up</a>
+
+                    </div>
+
                 </div>
-
-
-
             </div>
+        </nav>
+    </header>
+
+    <body>
+
+        <div class="container">
+            <form class="login-form">
+                <h2>Login</h2>
+                <div class="input-field">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <button type="submit">Login</button>
+            </form>
         </div>
-    </nav>
-</header>
 
-<body>
-
-    <div class="container">
-        <form class="login-form">
-            <h2>Login</h2>
-            <div class="input-field">
-                <i class="fas fa-envelope"></i> 
-                <input type="email" required>
-                <label>Email</label>
-            </div>
-            <div class="input-field">
-                <i class="fas fa-lock"></i> 
-                <input type="password" required>
-                <label>Password</label>
-            </div>
-            <button type="submit">Login</button>
-        </form>
-    </div>
-    
-
-    <script src="login_script.js"></script>
-</body>
-      </html>
+        <script src="login_script.js"></script>
+    </body>
+</html>
