all check button name error fixed class name error fixed

--- a/home.html
+++ b/home.html
@@ -70,8 +70,12 @@
 
 
     <body>
+
+        <h1>What will you <span>design</span> today?</h1>
+        <p>Canva makes it easy to create and share professional designs.</p>
+        <button type="submit" class="btn1">Start designing</button>
+       
         <div class="container">
-    
 
             <a href="Resumes.html" class="card-link">
                 <div class="card" style="background-color: #009440;">
