--- a/education.html
+++ b/education.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
-                                href="https://www.youtube.com/education">Education</a>
+                                href="education.html">Education</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about_us.html">Contact</a>
